<resources>
    <string name="app_name">Saúde Simples</string>

    <string name="menu_home">Home</string>
    <string name="menu_dados_cadastrais">Dados Cadastrais</string>
    <string name="menu_configuracao">Configuração</string>

    <string name="title_activity_main">Main Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Trocar o nome e email do drawer para o preenchido no formulário -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_registration_information">Registration Information</string>

    <!--  First form screen  -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="date_of_birth">Date of Birth</string>

    <!--  Second form screen  -->
    <string name="personal_information">Personal Information</string>
    <string name="pacemaker">Have a pacemaker?</string>
    <string name="special_needs">Have special needs?</string>
    <string name="elderly">Elderly?</string>
    <string name="health_conditions">Do you have any other relevant information about your health conditions?</string>
    <string name="inform_here">Inform Here</string>

    <!--  Third form screen  -->
    <string name="headache">Headache</string>
    <string name="nausea">Nausea</string>
    <string name="fever">Fever</string>
    <string name="stomachache">Stomachache</string>
    <string name="other_symptoms">Do you have any other symptoms?</string>

    <string name="text_queue">All very well! Now that we have confirmed your details we have everything we need to put you on the waiting list and save you time waiting.</string>
    <string name="place_queue">Your place in queue is</string>

    <!-- Settings Strings -->
    <string name="change_theme_text_title">Change themes</string>
    <string name="change_theme_text_description">Press this button if you want to change the Theme</string>
    <string name="button_change_theme_text">Change theme</string>
    <string name="change_language_text_title">Change Languages</string>
    <string name="change_language_text_description">Press this button if you want to change the Language</string>
    <string name="button_change_language_text">Change Language</string>
</resources>