<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configuracao.ConfiguracaoFragment">

    <TextView
        android:id="@+id/text_change_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/change_theme_text_title"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_change_theme_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_theme_text_description"
        app:layout_constraintStart_toStartOf="@+id/text_change_theme"
        app:layout_constraintTop_toBottomOf="@+id/text_change_theme" />

    <Button
        android:id="@+id/button_change_theme"
        android:layout_width="190sp"
        android:layout_height="wrap_content"
        android:text="@string/button_change_theme_text"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_change_theme_description"
        app:layout_constraintTop_toBottomOf="@+id/text_change_theme_description" />

    <TextView
        android:id="@+id/text_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/change_language_text_title"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_change_theme" />

    <TextView
        android:id="@+id/text_change_language_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language_text_description"
        app:layout_constraintStart_toStartOf="@+id/text_change_language"
        app:layout_constraintTop_toBottomOf="@+id/text_change_language" />

    <Button
        android:id="@+id/button_change_language"
        android:layout_width="190sp"
        android:layout_height="wrap_content"
        android:text="@string/button_change_language_text"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_change_language"
        app:layout_constraintTop_toBottomOf="@+id/text_change_language_description" />
</androidx.constraintlayout.widget.ConstraintLayout>